--- a/servicios.html
+++ b/servicios.html
@@ -36,9 +36,9 @@
       position: absolute;
       top: 0;
       left: 0;
-      height: 100vh;
-      transform: translateX(-100%);
-      transition: transform 0.3s ease;
+      height: 30vh;
+      transform: translateY(-100%);
+      transition: transform 0.3s ease-in;
       z-index: 1000;
       border-right: 1px solid #30363d;
     }
@@ -68,8 +68,6 @@
       text-decoration: none;
       font-weight: bold;
       display: block;
-      padding: 0.5rem;
-      border-radius: 6px;
       transition: background-color 0.2s;
     }
   
@@ -187,7 +185,7 @@
      ☰
   </div>
   <nav>
-    <ul><br><br>
+    <ul>
       <li><a href="index.html">Origen y evolución</a></li>
       <li><a href="tecnologias.html">Nuevas tecnologías</a></li>
       <li><a href="servicios.html">Servicios del Internet</a></li>
@@ -202,52 +200,52 @@
     </header>
     <main>
       <section>
-        <div class="img-placeholder"><img src="servi.jpg" alt=""></div>
-        <p><strong><h3>  <p>Internet está compuesta por una gran multitud de servicios que permiten a las personas estar comunicadas entre sí. No solo es una increíble fuente de información al alcance de la mano y accesible en segundos, sino que también ofrece herramientas indispensables para entender cómo funciona la sociedad actual. En esta sección se detallan algunos de los servicios más relevantes de Internet, incluyendo algunos que han quedado obsoletos, para mostrar lo rápido que evoluciona este entorno digital.</p>
+        <div class="img-placeholder"><img src="img/servicios-de-internet-2.jpg" alt=""></div>
+        <p><strong><h3>  <p>El Internet no solo conecta personas, sino que también ofrece una gran variedad de servicios que han transformado nuestra vida diaria. Estos servicios permiten acceder a información, comunicarnos, comprar, aprender y entretenernos de formas que antes no eran posibles. A continuación, te presentamos los principales servicios que ofrece el Internet:</p>
 </h3></strong></p>
       </section>
 
       
       <section class="row">
         <div class="col-text">
-          <h3>World Wide Web</h3>
-<p>La World Wide Web es una red informática mundial que transmite datos mediante el protocolo HTTP. Fue desarrollada a finales de los años 80 por Tim Berners-Lee y Robert Cailliau en el CERN. Actualmente, existen más de 1.200 millones de páginas web, aunque solo una parte de ellas están activas.</p>
+          <h3>World Wide Web (WWW)</h3>
+<p>La World Wide Web, o simplemente “la web”, es uno de los servicios más conocidos del Internet. Permite acceder a millones de sitios web a través de navegadores como Chrome, Firefox o Edge. Gracias al uso de lenguajes como HTML, CSS y JavaScript, los sitios pueden presentar información de manera visual e interactiva. La web es el espacio donde se encuentran portales de noticias, blogs, foros, redes sociales y mucho más.
+</p>
 
         </div>
         <div class="col-img">
-          <img src="World-Wide-Web.jpg" alt="">
+          <img src="img/WWW S.webp" alt="">
         </div>
       </section>
 
       <section class="row">
         <div class="col-img">
-          <img src="correo.jpg" alt="">
+          <img src="img/EMAIL S.jpg" alt="">
         </div>
         <div class="col-text">
-          <h3>Correo Electrónico</h3>
-           <p>El correo electrónico revolucionó la comunicación, sustituyendo a las cartas tradicionales. Surgió en los años 60 y fue perfeccionado por Ray Tomlinson, quien introdujo el uso de la arroba. Hoy en día servicios como Gmail u Outlook son herramientas esenciales para la vida personal y profesional.</p>
+          <h3>Correo Electrónico (EMAIL)</h3>
+           <p>El email fue uno de los primeros servicios ampliamente utilizados en Internet. Permite enviar y recibir mensajes instantáneos desde cualquier parte del mundo. Hoy en día, plataformas como Gmail, Outlook o Yahoo! ofrecen funciones avanzadas como adjuntar archivos, crear filtros y programar correos. Es un medio esencial en el mundo laboral, educativo y personal.</p>
 
         </div>
       </section>
 
        <section class="row">
         <div class="col-text">
-          <h3>Colaboración en Proyectos</h3>
-          <p>Herramientas como Google Drive o redes sociales permiten participar activamente en proyectos colaborativos y contribuir con ideas, archivos o comentarios en tiempo real.</p>
+          <h3>Comercio electrónico (E-commerce)</h3>
+          <p>El comercio electrónico ha revolucionado la forma de comprar y vender productos o servicios. Sitios como Amazon, MercadoLibre o AliExpress permiten realizar compras desde casa, con envíos a domicilio y múltiples opciones de pago. Además, muchas pequeñas empresas han creado tiendas en línea, facilitando el acceso a nuevos mercados. El e-commerce también incluye servicios como banca en línea, pagos móviles y suscripciones digitales.</p>
         </div>
         <div class="col-img">
-          <img src="Google-Drive.jpg" alt="Descripción de imagen">
+          <img src="img/e comerce s.webp" alt="Descripción de imagen">
         </div>
       </section>
 
       <section class="row">
         <div class="col-img">
-          <img src="transferencia.jpg" alt="Otra descripción">
+          <img src="img/e d.webp" alt="Otra descripción">
         </div>
         <div class="col-text">
-          <h3>Transferencia de Archivos y Intercambio de Archivos</h3>
-          <p>El FTP permite transferir archivos entre servidores o entre un servidor y un usuario. Aunque ha sido en parte sustituido por servicios en la nube, sigue siendo útil en desarrollo web y servidores.</p>
- <p>Este servicio permite a los usuarios compartir archivos directamente entre ellos, sin servidores centrales. Napster, eMule y BitTorrent son ejemplos. También dio origen a muchos casos de piratería digital.</p>
+          <h3> Educación en línea (e-learning)</h3>
+          <p>El Internet ha democratizado el acceso a la educación. A través de plataformas como Coursera, Khan Academy, Udemy o Moodle, las personas pueden estudiar desde cualquier lugar del mundo, en cualquier momento. Desde cursos básicos hasta especializaciones universitarias, el e-learning ofrece flexibilidad y una enorme variedad de contenidos.</p>
 
         </div>
       </section>
@@ -259,17 +257,17 @@
 
         </div>
         <div class="col-img">
-          <img src="motores-busqueda.jpg" alt="Descripción de imagen">
+          <img src="img/Buscadores-y-Navegadores-2.webp" alt="Descripción de imagen">
         </div>
       </section>
 
       <section class="row">
         <div class="col-img">
-          <img src="Comercio_electronico.jpg" alt="Otra descripción">
+          <img src="img/servicios-almacenamiento-nube.webp" alt="Otra descripción">
         </div>
         <div class="col-text">
-          <h3>Comercio Electrónico</h3>
-          <p>El comercio electrónico o e-commerce permite comprar y vender productos o servicios por Internet. Su desarrollo ha sido imparable, especialmente tras la pandemia. Tiendas en línea, reservas de viajes, pagos de impuestos, gestión bancaria y muchas más actividades se realizan hoy en día por esta vía.</p>
+          <h3> Servicios de almacenamiento y productividad</h3>
+          <p>Herramientas como Google Drive, Dropbox, Microsoft OneDrive y servicios de oficina en línea permiten guardar archivos, trabajar en equipo y compartir documentos sin importar la ubicación. Además, existen aplicaciones de calendario, videollamadas (como Zoom o Google Meet) y mensajería instantánea (como WhatsApp o Telegram) que facilitan el trabajo y la comunicación diaria.</p>
 
         </div>
       </section>
