--- a/tecnologias.html
+++ b/tecnologias.html
@@ -36,9 +36,9 @@
       position: absolute;
       top: 0;
       left: 0;
-      height: 100vh;
-      transform: translateX(-100%);
-      transition: transform 0.3s ease;
+      height: 30vh;
+      transform: translateY(-100%);
+      transition: transform 0.3s ease-in;
       z-index: 1000;
       border-right: 1px solid #30363d;
     }
@@ -68,8 +68,6 @@
       text-decoration: none;
       font-weight: bold;
       display: block;
-      padding: 0.5rem;
-      border-radius: 6px;
       transition: background-color 0.2s;
     }
   
@@ -187,7 +185,7 @@
      ☰
   </div>
   <nav>
-    <ul><br><br>
+    <ul>
     <li><a href="index.html">Origen y evolución</a></li>
       <li><a href="tecnologias.html">Nuevas tecnologías</a></li>
       <li><a href="servicios.html">Servicios del Internet</a></li>
@@ -201,16 +199,17 @@
     </header>
     <main>
       <section>
-        <div class="img-placeholder"><img src="servi.jpg" alt=""></div>
+        <div class="img-placeholder"><img src="img/tecnologias emergentes.png" alt=""></div>
         <p><strong>  <h2>Tecnologías Nuevas o Emergentes</h2>
   <p>
-    Las tecnologías emergentes son aquellas innovaciones que aún se encuentran en una fase de desarrollo y adopción temprana, pero que tienen el potencial de provocar un impacto profundo en la sociedad, la economía y la forma en la que vivimos y trabajamos. A diferencia de las tecnologías consolidadas, estas aún están evolucionando, adaptándose a nuevas necesidades y descubriendo sus aplicaciones más eficaces. 
-  </p>
+En las últimas décadas, el avance del Internet ha impulsado el desarrollo de una gran variedad de tecnologías nuevas y emergentes que están transformando la forma en que vivimos, trabajamos y nos comunicamos. Estas tecnologías no solo han mejorado la eficiencia de muchos procesos, sino que también han abierto nuevas oportunidades en áreas como la salud, la educación, la industria y el entretenimiento.
+
+Entre las más destacadas se encuentran la Inteligencia Artificial (IA), capaz de imitar ciertas funciones del pensamiento humano; el Big Data, que permite analizar enormes volúmenes de información en tiempo real; y el Internet de las Cosas (IoT), que conecta objetos cotidianos a la red para hacerlos más inteligentes y funcionales.  </p>
   <p>
-    Estas tecnologías suelen nacer en laboratorios de investigación o universidades, y poco a poco comienzan a aplicarse en la industria, los negocios y la vida cotidiana. Su adopción puede ser gradual, pero las que logran consolidarse tienden a generar grandes transformaciones. A continuación, exploramos las principales tecnologías emergentes que están marcando el presente y definirán el futuro.
+Estas innovaciones están en constante evolución y su impacto seguirá creciendo en los próximos años, por lo que conocerlas y entender su funcionamiento es clave para adaptarse al mundo actual y al futuro que se está construyendo.
   </p>
 
-    A todos estos dispositivos se les conoce como <strong>hosts</strong> o <em>endpoints</em>.
+
   </p></strong></p>
       </section>
 
@@ -218,11 +217,10 @@
         <div class="col-text">
       <h3>Internet de las Cosas</h3>
   <p>
-    El Internet de las Cosas  describe una red de objetos físicos vehículos, electrodomésticos, sensores, dispositivos portátiles, entre otros— que están equipados con tecnología para conectarse e intercambiar datos con otros dispositivos o sistemas a través de internet.
-  </p>
-  <p>
-    Ejemplos del IoT incluyen termostatos inteligentes que se ajustan automáticamente, refrigeradores que monitorean su contenido, sistemas de riego automatizados en agricultura o sensores urbanos para controlar el tráfico. Esta interconexión facilita una mayor eficiencia, ahorro energético y automatización inteligente.
-  </p>
+Internet de las Cosas (IoT)
+El Internet de las Cosas permite conectar objetos cotidianos a Internet, desde electrodomésticos hasta vehículos. Esto ha dado lugar a casas inteligentes (smart homes), donde puedes controlar luces, cerraduras y termostatos desde tu celular. También ha transformado la industria con sensores en fábricas, agricultura inteligente y ciudades conectadas que gestionan recursos de forma eficiente
+</p>
+ 
         </div>
         <div class="col-img">
           <img src="World-Wide-Web.jpg" alt="">
@@ -231,16 +229,13 @@
 
       <section class="row">
         <div class="col-img">
-          <img src="correo.jpg" alt="">
+          <img src="img/IA2.webp" alt="">
         </div>
         <div class="col-text">
-           <h3>Inteligencia Artificial (IA)</h3>
+           <h3> Inteligencia Artificial (IA)</h3>
   <p>
-    La Inteligencia Artificial es una rama de la informática que busca dotar a las máquinas de la capacidad de aprender, razonar, resolver problemas y tomar decisiones. Se basa en algoritmos que permiten reconocer patrones en grandes cantidades de datos.
-  </p>
-  <p>
-    Hoy en día, la IA se utiliza en asistentes virtuales (como Siri o Alexa), vehículos autónomos, diagnósticos médicos, sistemas de recomendación (como los de Netflix o Amazon), detección de fraudes financieros y mucho más. Una de sus aplicaciones emergentes más interesantes es la IA integrada al IoT (AIoT), que permite a los dispositivos tomar decisiones por sí mismos.
-  </p>
+La Inteligencia Artificial ha avanzado enormemente gracias a la conectividad y al intercambio masivo de datos en Internet. Hoy en día, existen asistentes virtuales como Siri, Alexa o Google Assistant que entienden y responden preguntas, sistemas de traducción automática, y algoritmos capaces de reconocer rostros, objetos, patrones y hasta generar textos o imágenes, como lo hace ChatGPT. Estas tecnologías dependen de grandes cantidades de datos que solo son posibles de procesar con conexión a Internet.  </p>
+ 
         </div>
       </section>
 
@@ -248,14 +243,11 @@
         <div class="col-text">
            <h3>Big Data</h3>
   <p>
-    Big Data se refiere a conjuntos de datos extremadamente grandes y complejos que requieren herramientas avanzadas para su procesamiento y análisis. Su valor reside en la capacidad de transformar esos datos en información útil.
-  </p>
-  <p>
-    Esta tecnología se aplica en múltiples campos: predicción de tendencias de mercado, monitoreo de salud pública, análisis de hábitos de consumo, estudios científicos, control logístico y más. El análisis de Big Data permite una toma de decisiones más precisa y personalizada en tiempo real.
-  </p>
+Big Data se refiere al manejo y análisis de enormes volúmenes de datos generados por personas, empresas y dispositivos conectados. Gracias al Internet, cada clic, búsqueda, compra o publicación se convierte en información útil para detectar patrones, tomar decisiones estratégicas o predecir comportamientos. Empresas de todos los sectores, desde salud hasta marketing, aprovechan Big Data para mejorar sus servicios.  </p>
+  
             </div>
         <div class="col-img">
-          <img src="Google-Drive.jpg" alt="Descripción de imagen">
+          <img src="img/big data TE.png"Descripción de imagen">
         </div>
       </section>
 </body>
